--- a/.github/workflows/kuaishou.yml
+++ b/.github/workflows/kuaishou.yml
@@ -4,7 +4,7 @@ name: 快手视频签到
 on:
   workflow_dispatch:
   schedule:
-     - cron: '15 19 * * *'
+     - cron: '*/30 0,2,4,6,8,12 * * *'
   watch:
     types: started
 jobs:
